--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://adwaith2521:Zebronics@cluster0.dopgk.mongodb.net/menuDB
 PORT=5000
+FRONTEND_URL=https://menu-frontend-cogh.onrender.com
